Separate messages for a failed and canceled screenshot

Add a new function that gets called when an screenshot has been canceled.

BUG: 427645